--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,27 @@ jobs:
         run: chmod +x ./gradlew
       - name: build
         run: ./gradlew build
-      - name: capture build artifacts
-        uses: actions/upload-artifact@v4
+      - name: Read Version Name
+        id: version
+        uses: juliangruber/read-file-action@v1
         with:
-          name: Artifacts
-          path: build/libs/
+          path: ./update/VERSION
+      - name: Read Changelog
+        id: changelog
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: ./update/CHANGELOG.md
+      - name: Get Short Commit Hash
+        id: sha
+        run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+      - name: Upload Mod Files to Release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: build/libs/*
+          tag: ${{steps.version.outputs.content}}-build-${{steps.sha.outputs.sha_short}}
+          release_name: Version ${{ steps.version.outputs.content}}
+          overwrite: true
+          file_glob: true
+          body: |
+            ${{ steps.changelog.outputs.content }}
