--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ org.gradle.parallel=true
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 minecraft_version=1.21.1
+mc_version=1.21
 yarn_mappings=1.21.1+build.3
 loader_version=0.16.14
 loom_version=1.10-SNAPSHOT
@@ -16,3 +17,5 @@ archives_base_name=monsterbreeder
 
 # Dependencies
 fabric_version=0.116.1+1.21.1
+jei_version=19.8.2.99
+modmenu_version=11.0.3
