Add config system

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,4 @@ archives_base_name=monster_breeder
 fabric_version=0.116.2+1.21.1
 jei_version=19.21.2.313
 modmenu_version=11.0.3
+midnightlib_version = 1.6.9+1.21-fabric
