--- a/build.gradle
+++ b/build.gradle
@@ -38,20 +38,17 @@ fabricApi {
 }
 
 dependencies {
-	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	// compile against the JEI API but do not include it at runtime
 	modCompileOnlyApi("mezz.jei:jei-${minecraft_version}-fabric-api:${jei_version}")
-	// at runtime, use the full JEI jar for Fabric
 	modRuntimeOnly("mezz.jei:jei-${minecraft_version}-fabric:${jei_version}")
 
 	modImplementation("com.terraformersmc:modmenu:${modmenu_version}")
+	modImplementation include ("maven.modrinth:midnightlib:${project.midnightlib_version}")
 }
 
 processResources {
