--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -3,41 +3,38 @@
 # certain platforms or Java versions, and provides a first line of defence
 # against bad commits.
 
-name: On push
-on:
-  push:
-    tags-ignore:
-      - '**'
+name: On Push
+on: [push]
 permissions:
   contents: write
 
 jobs:
   build:
-    name: Build and release preview
+    name: Build and Release Preview
     runs-on: ubuntu-24.04
     steps:
-      - name: Checkout repository
+      - name: Checkout Repository
         uses: actions/checkout@v4
-      - name: Validate gradle wrapper
+      - name: Validate Gradle wrapper
         uses: gradle/actions/wrapper-validation@v4
       - name: Setup JDK
         uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'microsoft'
-      - name: Make gradle wrapper executable
+      - name: Make Gradle Wrapper Executable
         run: chmod +x ./gradlew
-      - name: Build gradle project
+      - name: Build Gradle Project
         run: ./gradlew build
-      - name: Read version name
+      - name: Read Version Name
         id: version
         uses: juliangruber/read-file-action@v1
         with:
-          path: ./VERSION
-      - name: Get short commit hash
+          path: ./update/VERSION
+      - name: Get Short Commit Hash
         id: sha
         run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-      - name: Upload files to release
+      - name: Upload Files to Release
         uses: svenstaro/upload-release-action@v2
         if: github.ref == 'refs/heads/master'
         with:
