--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -11,6 +11,7 @@ permissions:
 jobs:
   build:
     name: Build and Release Preview
+    if: startsWith(github.ref, 'refs/heads/')
     runs-on: ubuntu-24.04
     steps:
       - name: Checkout Repository
