--- a/gradle.properties
+++ b/gradle.properties
@@ -14,8 +14,13 @@ mod_version=1.0.0
 maven_group=net.brocker.monster_breeder
 archives_base_name=monster-breeder-fabric
 
+# Runtime Settings
+# Allowed values: jei, rei
+item_mod=rei
+
 # Dependencies
 fabric_version=0.116.2+1.21.1
 jei_version=19.21.2.313
+rei_version=16.0.799
 modmenu_version=11.0.3
 midnightlib_version = 1.6.9+1.21-fabric
