--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,12 @@ repositories {
 		url = "https://maven.blamejared.com/"
 	}
 	maven {
+		url "https://maven.architectury.dev/"
+	}
+	maven {
+		url "https://maven.shedaniel.me"
+	}
+	maven {
 		name = "Terraformers"
 		url = "https://maven.terraformersmc.com/"
 	}
@@ -44,8 +50,15 @@ dependencies {
 
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
+	// The following two mods are used by REI
+	modApi "dev.architectury:architectury-fabric:13.0.8"
+	modApi "me.shedaniel.cloth:cloth-config-fabric:15.0.140"
+
 	modCompileOnlyApi("mezz.jei:jei-${minecraft_version}-fabric-api:${jei_version}")
-	modRuntimeOnly("mezz.jei:jei-${minecraft_version}-fabric:${jei_version}")
+	if (item_mod == "jei") { modRuntimeOnly("mezz.jei:jei-${minecraft_version}-fabric:${jei_version}") }
+
+	modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${rei_version}"
+	if (item_mod == "rei") { modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:${rei_version}" }
 
 	modImplementation("com.terraformersmc:modmenu:${modmenu_version}")
 	modImplementation include ("maven.modrinth:midnightlib:${project.midnightlib_version}")
