--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -32,17 +32,24 @@ jobs:
         uses: juliangruber/read-file-action@v1
         with:
           path: ./update/VERSION
-      - name: Get Short Commit Hash
-        id: sha
-        run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+      - name: Read Loader Name
+        id: loader
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: ./update/LOADER
+      - name: Read Minecraft Version
+        id: minecraft
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: ./update/MINECRAFT_VERSION
       - name: Upload Files to Release
         uses: svenstaro/upload-release-action@v2
         if: github.ref == 'refs/heads/master'
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: build/libs/*
-          tag: indev-${{ steps.version.outputs.content }}-build-${{ steps.sha.outputs.sha_short }}
-          release_name: Version ${{ steps.version.outputs.content }}
+          tag: indev-${{ steps.version.outputs.content }}-${{ steps.loader.outputs.content }}-${{ steps.minecraft.outputs.content }}
+          release_name: Version ${{ steps.version.outputs.content }} for ${{ steps.loader.outputs.content }} ${{ steps.minecraft.outputs.content }}
           prerelease: true
           make_latest: false
           overwrite: true
